# nocciolo

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  build.rs  start-kernel.cmd  start.cmd
.cargo/: config.toml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  gdt.rs  interrupts.rs  logging.rs  main.rs  memory.rs  serial.rs  vga_text_buffer.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  page.rs
kernel/src/device/: mod.rs  pit.rs
kernel/src/device/acpi/: handler.rs  mod.rs  rsdp.rs
kernel/src/device/ahci/: mod.rs
kernel/src/device/net/: intel_8254x.rs  mod.rs
kernel/src/device/pci/: config.rs  mod.rs  types.rs
kernel/src/interrupts/apic/: io.rs  local.rs  mod.rs
kernel/src/meta/: console.rs  mod.rs  symbols.rs  system.rs
kernel/src/task/: executor.rs  keyboard.rs  simple_executor.rs
os/: Cargo.toml  build.rs
os/src/: main.rs
src/: allocator.rs  debug.rs  gdt.rs  main.rs  memory.rs  vga_text_buffer.rs
src/task/: mod.rs
tools/: bochsrc.txt
