[package]
name = "nocciolo-kernel"
version = "0.1.1"
edition = "2021"

[dependencies]
bootloader = { version = "*", features = ["map_physical_memory"] }
lazy_static = { version = "*", features = ["spin_no_std"] }
linked_list_allocator = "*"
pc-keyboard = "*"
pic8259 = "*"
spin = "0.9.8"
uart_16550 = "*"
volatile = "0.2.6" # Upgrade issues
x86_64 = "*"

acpi = "*"
# aml = "*"
rsdp = "*"

[dependencies.conquer-once]
version = "*"
default-features = false

[dependencies.crossbeam-queue]
version = "*"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]
